--- a/index.html
+++ b/index.html
@@ -15,7 +15,33 @@
 	<body>
 		<div class="container">
 			<!-- intestazione -->
-			<header></header>
+			<header>
+				<div class="logo">
+					<img src="img/logo.png" alt="Logo">
+				</div>
+				<nav class="main-menu">
+					<ul>
+						<li>
+							<a href="#">LINK</a>
+						</li>
+						<li>
+							<a href="#">LINK</a>
+						</li>
+						<li>
+							<a href="#">LINK</a>
+						</li>
+						<li>
+							<a href="#">LINK</a>
+						</li>
+						<li>
+							<a href="#">LINK</a>
+						</li>
+						<li>
+							<a href="#">LINK</a>
+						</li>
+					</ul>
+				</nav>
+			</header>
 			<!-- /intestazione -->
 			<!-- corpo -->
 			<main>
