--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 			<main>
 				<!-- sezione hero -->
 				<section class="hero">
-
+					<div class="overlay"></div>
+					<div class="hero-text">
+						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure deleniti officia sapiente voluptatum sit fugit aliquam ratione, quisquam quis vero molestiae.</p>
+					</div>
 				</section>
 				<!-- /sezione hero -->
 				<!-- sezione leadership -->
