Aggiunta sezione leadership

--- a/index.html
+++ b/index.html
@@ -56,32 +56,34 @@
 				<!-- /sezione hero -->
 				<!-- sezione leadership -->
 				<section class="leadership">
-					<div class="leadership-title"></div>
-					<div class="test">
-						<div class="overlay"></div>
+					<div class="leadership-title">
+						<h2>Leadership</h2>
+						<p>Lorem ipsum dolor sit amet</p>
 					</div>
-
 					<div class="row clearfix">
 						<div class="col-left">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
+							<div class="col-img" id="tizia">
+								<div class="overlay"></div>
+							</div>
+							<h4>Lorem</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
 						</div>
 						<div class="col-center">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
+							<div class="col-img" id="tizio">
+								<div class="overlay"></div>
+							</div>
+							<h4>Lorem</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
 						</div>
 						<div class="col-right">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.
+							<div class="col-img" id="gente">
+								<div class="overlay"></div>
+							</div>
+							<h4>Lorem</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
 						</div>
 					</div>
 
