--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 			</main>
 			<!-- /corpo -->
 			<!-- footer -->
-			<footer></footer>
+			<footer>
+				Designed with <span>&hearts;</span>
+			</footer>
 			<!-- /footer -->
 		</div>
 	</body>
