refact image cover

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<main>
 				<!-- sezione hero -->
 				<section class="hero">
+					<img class="image-cover" src="img/banner.jpg" alt="Banner">
 					<div class="overlay"></div>
 					<div class="hero-text">
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
@@ -62,7 +63,8 @@
 					</div>
 					<div class="row clearfix">
 						<div class="col-left">
-							<div class="col-img" id="tizia">
+							<div class="col-img">
+								<img class="image-cover" src="img/img-1.jpg" alt="Tizia">
 								<div class="overlay"></div>
 							</div>
 							<h4>Lorem</h4>
@@ -70,6 +72,7 @@
 						</div>
 						<div class="col-center">
 							<div class="col-img" id="tizio">
+								<img class="image-cover" src="img/banner-2.jpg" alt="Tizio">
 								<div class="overlay"></div>
 							</div>
 							<h4>Lorem</h4>
@@ -80,6 +83,7 @@
 						</div>
 						<div class="col-right">
 							<div class="col-img" id="gente">
+								<img class="image-cover" src="img/img-3.jpg" alt="Gente">
 								<div class="overlay"></div>
 							</div>
 							<h4>Lorem</h4>
