--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 			<!-- corpo -->
 			<main>
 				<!-- sezione hero -->
-				<section class="hero">
+				<section class="hero overlay">
 					<img class="image-cover" src="img/banner.jpg" alt="Banner">
-					<div class="overlay"></div>
 					<div class="hero-text">
 						<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure deleniti officia sapiente voluptatum sit fugit aliquam ratione, quisquam quis vero molestiae.</p>
@@ -63,17 +62,15 @@
 					</div>
 					<div class="row clearfix">
 						<div class="col-left">
-							<div class="col-img">
+							<div class="col-img overlay">
 								<img class="image-cover" src="img/img-1.jpg" alt="Tizia">
-								<div class="overlay"></div>
 							</div>
 							<h4>Lorem</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
 						</div>
 						<div class="col-center">
-							<div class="col-img" id="tizio">
+							<div class="col-img overlay">
 								<img class="image-cover" src="img/banner-2.jpg" alt="Tizio">
-								<div class="overlay"></div>
 							</div>
 							<h4>Lorem</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
@@ -82,9 +79,8 @@
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
 						</div>
 						<div class="col-right">
-							<div class="col-img" id="gente">
+							<div class="col-img overlay">
 								<img class="image-cover" src="img/img-3.jpg" alt="Gente">
-								<div class="overlay"></div>
 							</div>
 							<h4>Lorem</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, obcaecati incidunt. Temporibus iste veritatis, dolores, deleniti nulla quisquam aperiam obcaecati totam, voluptatibus a cum sapiente recusandae ipsum? Iste, a facere.</p>
